ci: auto-release on CLI upgrade instead of PR

--- a/.github/workflows/auto-upgrade-cli.yml
+++ b/.github/workflows/auto-upgrade-cli.yml
@@ -10,12 +10,14 @@ on:
         required: true
 
 jobs:
-  upgrade-cli:
-    name: Upgrade OmniEdge CLI version
+  upgrade-and-release:
+    name: Upgrade CLI and Release Action
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Get version
         id: version
@@ -43,24 +45,17 @@ jobs:
           fi
           echo "Updated README to version ${VERSION}"
 
-      - name: Create Pull Request
-        uses: peter-evans/create-pull-request@v6
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          commit-message: "chore: upgrade omniedge-cli to v${{ steps.version.outputs.version }}"
-          title: "🔄 Upgrade OmniEdge CLI to v${{ steps.version.outputs.version }}"
-          body: |
-            ## Automated CLI Upgrade
+      - name: Commit and push changes
+        run: |
+          VERSION="${{ steps.version.outputs.version }}"
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add -A
+          git commit -m "chore: upgrade omniedge-cli to v${VERSION}" || echo "No changes to commit"
+          git push origin main
 
-            This PR was automatically created by the CLI release workflow.
-
-            **Changes:**
-            - Updated `action.yml` default version to `${{ steps.version.outputs.version }}`
-            - Updated `README.md` with new version
-
-            **CLI Release:** https://github.com/omniedgeio/omniedge-cli/releases/tag/v${{ steps.version.outputs.version }}
-          branch: auto-upgrade/cli-v${{ steps.version.outputs.version }}
-          base: main
-          labels: |
-            automated
-            dependency-update
+      - name: Create and push tag
+        run: |
+          VERSION="${{ steps.version.outputs.version }}"
+          git tag -a "v${VERSION}" -m "Release v${VERSION} - Auto-upgraded from omniedge-cli"
+          git push origin "v${VERSION}"
